# OmniAgent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/omni_agent/: __init__.py  main.py
src/omni_agent/api/: app.py
src/omni_agent/api/routes/: digital_human.py  image.py  task.py  video.py  voice.py
src/omni_agent/core/: llm_router.py  orchestrator.py  plugin_manager.py  task_dag.py
src/omni_agent/modules/digital_human/: engine.py
src/omni_agent/modules/image/: comfyui_backend.py  engine.py
src/omni_agent/modules/video/: engine.py
src/omni_agent/modules/voice/: engine.py
src/omni_agent/utils/: config.py  logger.py
