[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-agent"
version = "0.1.0"
description = "全能AI智能体 — 集图片、视频、配音、数字人于一体"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OmniAgent Team"}
]
keywords = ["ai", "agent", "image-generation", "video-generation", "tts", "digital-human"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Web框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # LLM
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "dashscope>=1.20.0",

    # 任务调度
    "celery>=5.4.0",
    "redis>=5.0.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # 图片/视频处理
    "Pillow>=10.3.0",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.27.0",

    # 工具
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]

image = [
    "comfyui-client>=0.1.0",
    "replicate>=0.25.0",
]

voice = [
    "cosyvoice>=0.1.0",
    "fish-speech>=0.1.0",
]

video = [
    "moviepy>=1.0.3",
]

all = [
    "omni-agent[image,voice,video]",
]

[project.scripts]
omni-agent = "omni_agent.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
